--- a/recipes/super_smoothie.html
+++ b/recipes/super_smoothie.html
@@ -17,12 +17,33 @@
       Here we have the smoothie you never knew you've always wanted! Its filled
       with all the goodness to keep your system running at optimal functions, as
       well as a protein punch to keep your muscles happy and topped off with a
-      creamy irrisitable flavour from both the Avocado and subtle sweetness of
+      creamy irresistible flavour from both the Avocado and subtle sweetness of
       the golden Mangooo!
       <br />
       It's simple, its juicy and just the right consistency to keep you
       satisfied for the whole morning - The one and only smoothie you'll keep
       coming back to this summer!
+    </p>
+    <p>
+        <h2>Ingredients</h2>
+        <em>**(makes 2 large smoothies)**</em>
+        <br>
+        <ul>
+            <li>1 fresh mango medium <em>sized mango</em>, peeled and pitted (1 cup if frozen bits)</li>
+            <li>1/2 pitted avocado</li>
+            <li>1/2 cup Greek yoghurt</li>
+            <li>1/2 cup Oat milk or almond (<em>try avoid full fat, will take away from the avo/mango specialty!</em>)</li>
+            <li>1-2 TB Honey or to your taste</li>
+            <li>1 cup ice cubes for the extra cold finish</li>
+            <li>1 serving PHD vegan protein <em>(preferably vanilla flavour)</em></li>
+            <li>Favourite <em>OPTIONAL</em> add in: 2-3 drops Orange essential oil</li>
+            <li>Peanuts are a juicy addition too - Be sparing though</li>
+        </ul>
+        <p>
+        <b>
+            Place all ingredients in a <a href="https://nutribullet.co.uk/?HSTV=PPC&gad_source=1&gclid=CjwKCAjwreW2BhBhEiwAavLwfNGW3J3c4pepARmKz6d-PbD6wP2MujU6ovwcbuGCVPv3FnbnWg1NKBoC7t4QAvD_BwE" target="_blank">Blender</a> and blend until smooth!
+        </b>
+        </p>
     </p>
   </body>
 </html>
