Save updates of progress in project and small changes to files

--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
   <body>
     <h1>Odin Recipes</h1>
     <p>
-      <a
-        href="./recipes/super_smoothie.html"
-        target="_blank"
-        rel="noopener noreference"
-      >
-        Zooty Fruity Smoothie</a
-      >
+    <ul>
+        <li><a href="./recipes/super_smoothie.html" target="_blank"><u>Zooty Fruity Smoothie</u></a></li>
+        <li><a href="./recipes/lucys_juicy.html" target="_blank"><u>Lucy's Secret Juicy Blend</u></a></li>
+        <li><a href="./recipes/banana_choco.html" target="_blank"><u>Winter Treats</u></a></li>
+    </ul>
+      
     </p>
   </body>
 </html>
