--- a/recipes/lucys_juicy.html
+++ b/recipes/lucys_juicy.html
@@ -15,9 +15,8 @@
       />
     </p>
     <p>
-      FINALLY the beans been leaked!! Lucy's Juicy Blend is here and we're
-      <b><em>LOVING IT!</em></b>
-      <br />
+      FINALLY the beans been leaked!! Lucy's Juicy Blend is here and we're <b><em>LOVING IT!</em></b>
+     <p>
       This is a deliciously refreshing juice with a huge health hit too. It's
       ingredients are fabulous to ward off cancer, cleanse the liver and kidney
       and should appear as part of your beauty ritual with it's anti ageing
@@ -26,6 +25,7 @@
       Lemon and Ginger have long been incorporated into warm beverages and
       herbal teas. This combination was traditionally used to soothe the
       digestive system, settle the stomach and relieve mild nausea.
+     </p>
     </p>
     <p>
         <h2>Ingredients</h2>
