--- a/recipes/super_smoothie.html
+++ b/recipes/super_smoothie.html
@@ -11,6 +11,7 @@
       <img
         src="../recipes/images/maxresdefault.jpg"
         alt="avo-mango-smoothie /"
+        width="650"
       />
     </p>
     <p>
