--- a/recipes/banana_choco.html
+++ b/recipes/banana_choco.html
@@ -3,7 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Winter Treats</title>
   </head>
-  <body></body>
+  <body>
+    <h1><u>Choco-nana Delight</u></h1>
+    <p>
+        <img src="../recipes/images/Banana_choc.jpg" alt="choc" height="450">
+    </p>
+    <p>
+      When you want a warm drink but hot chocolate is not doing the trick, this
+      is the smoothie to make! We suggest you make it thick, pour it in a bowl,
+      and top it with some granola and cacao nibs to have as your breakfast on
+      those colder mornings! It makes for a balanced and healthy meal to start
+      your day! And it feels like you’re eating dessert for breakfast!
+    </p>
+    <p>
+      Although this <b>Choconana</b> may seem to just be dirty desert, it's
+      actually packed, I tell you PACKED with the goodness that you were looking
+      for on those cold mornings
+    </p>
+    <h2><u>Ingredients</u></h2>
+    <p>
+        <ul>
+            <li>1 cup unsweetened almond or coconut milk (or other milk of choice)</li>
+            <li>1 ounce cold water</li>
+            <li>1 scoop protein powder</li>
+            <li>1/4 cup rolled oats</li>
+            <li>1 tablespoon cocoa powder</li>
+            <li>1 medium banana, sliced</li>
+            <li>1/4 teaspoon vanilla extract</li>
+            <li>1 pitted Medjool date</li>
+        </ul>
+    </p>
+    <p>To get that extra thick desert texture try using the <a href="https://www.target.com/p/kitchenaid-variable-speed-hand-blender-khbv53/-/A-79602829?preselect=79442750#lnk=sametab" target="_blank">Variable speed hand blender</a> by <b>@KitchAid!</b>
+    </p>
+  </body>
 </html>
