Added "Homepage' link to each additional recipe
Honestly I learnt from others code Ive read so far!

--- a/recipes/banana_choco.html
+++ b/recipes/banana_choco.html
@@ -37,5 +37,8 @@
     </p>
     <p>To get that extra thick desert texture try using the <a href="https://www.target.com/p/kitchenaid-variable-speed-hand-blender-khbv53/-/A-79602829?preselect=79442750#lnk=sametab" target="_blank">Variable speed hand blender</a> by <b>@KitchAid!</b>
     </p>
+    <div>
+        <a href="../index.html">Homepage</a>
+    </div>
   </body>
 </html>
