--- a/recipes/lucys_juicy.html
+++ b/recipes/lucys_juicy.html
@@ -41,5 +41,8 @@
         </ul>
     </p>
     <p>Have this every morning or <b>twice a day</b> if you feel a flu start coming on - muy bueno esta bebida!</p>
+    <div>
+        <a href="../index.html">Homepage</a>
+    </div>
   </body>
 </html>
