--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
     <title>Recipe Prac1</title>
   </head>
   <body>
     <h1>Odin Recipes</h1>
     <p>
-    <ul>
-        <li><a href="./recipes/super_smoothie.html" target="_blank"><u>Zooty Fruity Smoothie</u></a></li>
-        <li><a href="./recipes/lucys_juicy.html" target="_blank"><u>Lucy's Secret Juicy Blend</u></a></li>
-        <li><a href="./recipes/banana_choco.html" target="_blank"><u>Winter Treats</u></a></li>
-    </ul>
-      
+    <div class="recipes">
+      <a href="./recipes/super_smoothie.html" target="_blank"><u>Zooty Fruity Smoothie</u></a>
+    </div>
+    <div class="recipes">
+      <a href="./recipes/lucys_juicy.html" target="_blank"><u>Lucy's Secret Juicy Blend</u></a>
+    </div>
+    <div class="recipes">
+      <a href="./recipes/banana_choco.html" target="_blank"><u>Winter Treats</u></a>
+    </div>
     </p>
   </body>
 </html>
