Updates files on playing around with css
Honestly bothers me a bit that 2 years ago I was SO MUCH more proficient in
CSS//HTML buut I'm back to basic and doing it without following along so
just have to be patient with the process as I know taking time on the foundations will
pay off!

--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
     <title>Recipe Prac1</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
+    <h1><u>Odin Recipes</u></h1>
     <p>
     <div class="recipes">
-      <a href="./recipes/super_smoothie.html" target="_blank"><u>Zooty Fruity Smoothie</u></a>
+      <button class="button">
+      <a href="./recipes/super_smoothie.html" target="_blank">Zooty Fruity Smoothie</a>
+      </button>
     </div>
     <div class="recipes">
-      <a href="./recipes/lucys_juicy.html" target="_blank"><u>Lucy's Secret Juicy Blend</u></a>
+      <button class="button">
+        <a href="./recipes/lucys_juicy.html" target="_blank">Lucy's Secret Juicy Blend</a>
+      </button>
     </div>
     <div class="recipes">
-      <a href="./recipes/banana_choco.html" target="_blank"><u>Winter Treats</u></a>
+      <button class="button">
+        <a href="./recipes/banana_choco.html" target="_blank">Winter Treats</a>
+      </button>
     </div>
     </p>
   </body>
