--- a/index.html
+++ b/index.html
@@ -5,21 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css">
     <title>Recipe Prac1</title>
+    <style>
+      body {
+        background-color: rgb(250, 250, 166);
+      }
+    </style>
   </head>
   <body>
     <h1><u>Odin Recipes</u></h1>
     <p>
-    <div class="recipes">
+    <div class="recipes centre">
       <button class="button">
       <a href="./recipes/super_smoothie.html" target="_blank">Zooty Fruity Smoothie</a>
       </button>
     </div>
-    <div class="recipes">
+    <div class="recipes centre2" style="background-color: rgb(239, 192, 254);">
       <button class="button">
         <a href="./recipes/lucys_juicy.html" target="_blank">Lucy's Secret Juicy Blend</a>
       </button>
     </div>
-    <div class="recipes">
+    <div class="recipes centre">
       <button class="button">
         <a href="./recipes/banana_choco.html" target="_blank">Winter Treats</a>
       </button>
