Update the forgotten committed recipes.html files
when I went to commit my core html/css i saw VSC code inform me of the file
i forgot to commit - nice reminder

--- a/recipes/banana_choco.html
+++ b/recipes/banana_choco.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles.css" />
     <title>Winter Treats</title>
+    <style>
+      body {
+        background-color: rgb(255, 225, 183);
+      }
+    </style>
   </head>
   <body>
     <h1><u>Choco-nana Delight</u></h1>
     <p>
-        <img src="../recipes/images/Banana_choc.jpg" alt="choc" height="450">
+        <img src="../recipes/images/Banana_choc.jpg" alt="choc" height="450"
+        class="images">
     </p>
     <p>
       When you want a warm drink but hot chocolate is not doing the trick, this
@@ -39,7 +45,9 @@
     <p>To get that extra thick desert texture try using the <a href="https://www.target.com/p/kitchenaid-variable-speed-hand-blender-khbv53/-/A-79602829?preselect=79442750#lnk=sametab" target="_blank">Variable speed hand blender</a> by <b>@KitchAid!</b>
     </p>
     <div>
+      <button class="button">
         <a href="../index.html">Homepage</a>
+      </button>
     </div>
   </body>
 </html>
