--- a/recipes/lucys_juicy.html
+++ b/recipes/lucys_juicy.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles.css" />
     <title>Lucy's Juicy Blend</title>
+    <style>
+      body {
+        background-color: rgb(165, 205, 248);
+      }
+    </style>
   </head>
   <body>
     <h1>Watermelon-Lime-Ginger - "Lucy's Juicy"</h1>
@@ -13,6 +18,7 @@
         src="../recipes/images/watermelon-mojito9.jpg"
         alt="special juicy Lucy"
         height="550"
+        class="images"
       />
     </p>
     <p>
@@ -43,7 +49,9 @@
     </p>
     <p>Have this every morning or <b>twice a day</b> if you feel a flu start coming on - muy bueno esta bebida!</p>
     <div>
+      <button class="button">
         <a href="../index.html">Homepage</a>
+      </button>
     </div>
   </body>
 </html>
