--- a/recipes/super_smoothie.html
+++ b/recipes/super_smoothie.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles.css" />
     <title>Super Smoothie</title>
+    <style>
+      body {
+        background-color: rgb(226, 253, 220);
+      }
+    </style>
   </head>
   <body>
     <h1>Zooty Fruity Smoothie</h1>
@@ -12,7 +17,7 @@
       <img
         src="../recipes/images/maxresdefault.jpg"
         alt="avo-mango-smoothie /"
-        width="650"
+        class="images"
       />
     </p>
     <p>
@@ -21,6 +26,7 @@
       well as a protein punch to keep your muscles happy and topped off with a
       creamy irresistible flavour from both the Avocado and subtle sweetness of
       the golden Mangooo!
+      <br />
       <br />
       It's simple, its juicy and just the right consistency to keep you
       satisfied for the whole morning - The one and only smoothie you'll keep
@@ -66,7 +72,9 @@
       </p>
     </div>
     <div>
-      <a href="../index.html">Homepage</a>
+      <button class="button">
+        <a href="../index.html">Homepage</a>
+      </button>
     </div>
   </body>
 </html>
