Update the Recipe project with all html/css files
Loong time since Ive done a git commit on this project or lets say
A LOT of changes since last commit. I spent some time with the css layout
and the new understanding of margin/padding/border-box - played around with
external css, internal and inline - got a bit messy but improve with each 'recipe' html
I know flexbox is next and that add even more depth or say options :I

--- a/recipes/banana_choco.html
+++ b/recipes/banana_choco.html
@@ -7,45 +7,63 @@
     <title>Winter Treats</title>
     <style>
       body {
-        background-color: rgb(255, 225, 183);
+        background-color: rgb(244, 189, 113);
       }
     </style>
   </head>
   <body>
-    <h1><u>Choco-nana Delight</u></h1>
-    <p>
-        <img src="../recipes/images/Banana_choc.jpg" alt="choc" height="450"
-        class="images">
-    </p>
-    <p>
-      When you want a warm drink but hot chocolate is not doing the trick, this
-      is the smoothie to make! We suggest you make it thick, pour it in a bowl,
-      and top it with some granola and cacao nibs to have as your breakfast on
-      those colder mornings! It makes for a balanced and healthy meal to start
-      your day! And it feels like you’re eating dessert for breakfast!
-    </p>
-    <p>
-      Although this <b>Choconana</b> may seem to just be dirty desert, it's
-      actually packed, I tell you PACKED with the goodness that you were looking
-      for on those cold mornings
-    </p>
-    <h2><u>Ingredients</u></h2>
-    <p>
-        <ul>
-            <li>1 cup unsweetened almond or coconut milk (or other milk of choice)</li>
-            <li>1 ounce cold water</li>
-            <li>1 scoop protein powder</li>
-            <li>1/4 cup rolled oats</li>
-            <li>1 tablespoon cocoa powder</li>
-            <li>1 medium banana, sliced</li>
-            <li>1/4 teaspoon vanilla extract</li>
-            <li>1 pitted Medjool date</li>
-        </ul>
-    </p>
-    <p>To get that extra thick desert texture try using the <a href="https://www.target.com/p/kitchenaid-variable-speed-hand-blender-khbv53/-/A-79602829?preselect=79442750#lnk=sametab" target="_blank">Variable speed hand blender</a> by <b>@KitchAid!</b>
-    </p>
-    <div>
-      <button class="button">
+    <h1 style="background-color: rgb(38, 18, 5); color: rgb(140, 74, 33)">
+      Choco-nana Delight
+    </h1>
+    <div style="width: fit-content; margin-bottom: 1em">
+      <img
+        src="../recipes/images/Banana_choc.jpg"
+        alt="choc"
+        height="450"
+        class="images"
+      />
+    </div>
+    <div class="message3">
+      <p>
+        When you want a warm drink but hot chocolate is not doing the trick,
+        this is the smoothie to make! We suggest you make it thick, pour it in a
+        bowl, and top it with some granola and cacao nibs to have as your
+        breakfast on those colder mornings! It makes for a balanced and healthy
+        meal to start your day! And it feels like you’re eating dessert for
+        breakfast!
+        <br />
+        <br />
+        Although this <b>Choconana</b> may seem to just be dirty desert, it's
+        actually packed, I tell you PACKED with the goodness that you were
+        looking for on those cold mornings
+      </p>
+    </div>
+    <div class="ingredients three">
+      <h2>Ingredients</h2>
+      <ul>
+        <li>
+          1 cup unsweetened almond or coconut milk (or other milk of choice)
+        </li>
+        <li>1 ounce cold water</li>
+        <li>1 scoop protein powder</li>
+        <li>1/4 cup rolled oats</li>
+        <li>1 tablespoon cocoa powder</li>
+        <li>1 medium banana, sliced</li>
+        <li>1/4 teaspoon vanilla extract</li>
+        <li>1 pitted Medjool date</li>
+      </ul>
+      <p>
+        To get that extra thick desert texture try using the
+        <a
+          href="https://www.target.com/p/kitchenaid-variable-speed-hand-blender-khbv53/-/A-79602829?preselect=79442750#lnk=sametab"
+          target="_blank"
+          >Variable speed hand blender</a
+        >
+        by <b>@KitchAid!</b>
+      </p>
+    </div>
+    <div class="button3">
+      <button class="span">
         <a href="../index.html">Homepage</a>
       </button>
     </div>
