--- a/recipes/super_smoothie.html
+++ b/recipes/super_smoothie.html
@@ -7,32 +7,39 @@
     <title>Super Smoothie</title>
     <style>
       body {
-        background-color: rgb(226, 253, 220);
+        background-color: rgb(163, 203, 148);
       }
     </style>
   </head>
   <body>
-    <h1>Zooty Fruity Smoothie</h1>
-    <p>
+    <h1 style="background-color: rgb(44, 113, 19); color: rgb(200, 163, 0)">
+      Zooty Fruity Smoothie
+    </h1>
+    <div style="width: fit-content; background-color: rgb(44, 113, 19)">
       <img
         src="../recipes/images/maxresdefault.jpg"
         alt="avo-mango-smoothie /"
         class="images"
       />
-    </p>
-    <p>
-      Here we have the smoothie you never knew you've always wanted! Its filled
-      with all the goodness to keep your system running at optimal functions, as
-      well as a protein punch to keep your muscles happy and topped off with a
-      creamy irresistible flavour from both the Avocado and subtle sweetness of
-      the golden Mangooo!
-      <br />
-      <br />
-      It's simple, its juicy and just the right consistency to keep you
-      satisfied for the whole morning - The one and only smoothie you'll keep
-      coming back to this summer!
-    </p>
-    <div class="ingredients">
+    </div>
+    <div class="message1">
+      <p>
+        Here we have the smoothie you never knew you've always wanted! Its
+        filled with all the goodness to keep your system running at optimal
+        functions, as well as a protein punch to keep your muscles happy and
+        topped off with a creamy irresistible flavour from both the Avocado and
+        subtle sweetness of the golden Mangooo!
+        <br />
+        <br />
+        It's simple, its juicy and just the right consistency to keep you
+        satisfied for the whole morning - The one and only smoothie you'll keep
+        coming back to this summer!
+      </p>
+    </div>
+    <div
+      class="ingredients one"
+      style="background-color: rgb(57, 96, 43); color: rgb(200, 163, 0)"
+    >
       <h2>Ingredients</h2>
       <em>**(makes 2 large smoothies)**</em>
       <br />
@@ -71,8 +78,8 @@
         </b>
       </p>
     </div>
-    <div>
-      <button class="button">
+    <div class="button1">
+      <button class="span">
         <a href="../index.html">Homepage</a>
       </button>
     </div>
