--- a/index.html
+++ b/index.html
@@ -3,32 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>Recipe Prac1</title>
     <style>
       body {
-        background-color: rgb(250, 250, 166);
+        background-color: rgb(1, 1, 1);
       }
     </style>
   </head>
   <body>
-    <h1><u>Odin Recipes</u></h1>
-    <p>
-    <div class="recipes centre">
-      <button class="button">
-      <a href="./recipes/super_smoothie.html" target="_blank">Zooty Fruity Smoothie</a>
-      </button>
+    <h1 style="background-color: rgb(1, 1, 1)">Odin Recipes</h1>
+    <div class="recipes centre" style="margin-top: 0">
+      <span class="span">
+        <a href="./recipes/super_smoothie.html" target="_blank"
+          >Zooty Fruity Smoothie</a
+        >
+      </span>
     </div>
-    <div class="recipes centre2" style="background-color: rgb(239, 192, 254);">
-      <button class="button">
-        <a href="./recipes/lucys_juicy.html" target="_blank">Lucy's Secret Juicy Blend</a>
-      </button>
+    <div class="recipes centre2" style="background-color: rgb(255, 114, 151)">
+      <span class="span">
+        <a href="./recipes/lucys_juicy.html" target="_blank"
+          >Lucy's Secret Juicy Blend</a
+        >
+      </span>
     </div>
-    <div class="recipes centre">
-      <button class="button">
+    <div class="recipes centre" style="background-color: rgb(251, 160, 79)">
+      <span class="span">
         <a href="./recipes/banana_choco.html" target="_blank">Winter Treats</a>
-      </button>
+      </span>
     </div>
-    </p>
+    <div style="margin-top: 45px; width: fit-content">
+      <img
+        src="./recipes/images/maxresdefault.jpg"
+        alt="special juicy Lucy"
+        style="height: 417.852px; width: 650px; margin-right: 16px"
+        class="images"
+      />
+      <img
+        src="./recipes/images/watermelon-mojito9.jpg"
+        alt="special juicy Lucy"
+        style="height: 417.852px; width: auto"
+        class="images"
+      />
+      <img src="./recipes/images/Banana_choc.jpg" alt="special juicy Lucy"
+      class="images" style="margin-left: 16px"
+    </div>
   </body>
 </html>
