--- a/recipes/lucys_juicy.html
+++ b/recipes/lucys_juicy.html
@@ -12,46 +12,118 @@
     </style>
   </head>
   <body>
-    <h1>Watermelon-Lime-Ginger - "Lucy's Juicy"</h1>
-    <p>
+    <h1
+      style="
+        color: rgb(235, 52, 52);
+        width: 800px;
+        background-color: rgb(45, 54, 75);
+      "
+    >
+      Watermelon-Lime-Ginger - "Lucy's Juicy"
+    </h1>
+    <div
+      style="width: 1100px; margin: 1em auto; background-color: rgb(45, 54, 75)"
+    >
       <img
         src="../recipes/images/watermelon-mojito9.jpg"
         alt="special juicy Lucy"
-        height="550"
+        style="width: 350px; margin-right: 5px"
         class="images"
       />
-    </p>
-    <p>
-      FINALLY the beans been leaked!! Lucy's Juicy Blend is here and we're <b><em>LOVING IT!</em></b>
-     <p>
-      This is a deliciously refreshing juice with a huge health hit too. It's
-      ingredients are fabulous to ward off cancer, cleanse the liver and kidney
-      and should appear as part of your beauty ritual with it's anti ageing
-      properties.
-      <br />
-      Lemon and Ginger have long been incorporated into warm beverages and
-      herbal teas. This combination was traditionally used to soothe the
-      digestive system, settle the stomach and relieve mild nausea.
-     </p>
-    </p>
-    <p>
-        <h2>Ingredients</h2>
-        <em>**(Add more ingredients for more juice or consider out optional ingredients for the extra <b>boost</b> on your system)**</em>
-        <br>
+      <img
+        src="../recipes/images/watermelon-mojito9.jpg"
+        alt="special juicy Lucy"
+        style="width: 350px"
+        class="images"
+      />
+      <img
+        src="../recipes/images/watermelon-mojito9.jpg"
+        alt="special juicy Lucy"
+        style="width: 350px; margin-left: 5px"
+        class="images"
+      />
+    </div>
+    <div style="width: fit-content; background-color: rgb(45, 54, 75)">
+      <p style="border-top-right-radius: 20px; border-top-left-radius: 20px">
+        FINALLY the beans been leaked!! Lucy's Juicy Blend is here and we're
+        <b><em>LOVING IT!</em></b>
+      </p>
+      <p
+        style="
+          border-bottom-left-radius: 20px;
+          border-bottom-right-radius: 20px;
+        "
+      >
+        This is a deliciously refreshing juice with a huge health hit too. It's
+        ingredients are fabulous to ward off cancer, cleanse the liver and
+        kidney and should appear as part of your beauty ritual with it's anti
+        ageing properties.
+        <br />
+        Lemon and Ginger have long been incorporated into warm beverages and
+        herbal teas. This combination was traditionally used to soothe the
+        digestive system, settle the stomach and relieve mild nausea.
+      </p>
+    </div>
+    <div style="width: fit-content; margin: 1em auto">
+      <div
+        class="ingredients"
+        style="
+          background-color: rgb(45, 54, 75);
+          color: rgb(235, 52, 52);
+          padding-top: 0px;
+          border-top-left-radius: 20px;
+          border-top-right-radius: 20px;
+          border-bottom: 0;
+        "
+      >
+        <h2 style="padding: 10px"><u>Ingredients</u></h2>
+        <em
+          >**(Add more ingredients for more juice or consider out optional
+          ingredients for the extra <b>boost</b> on your system)**</em
+        >
+        <br />
         <ul>
-            <li>10lb watermelon</li>
-            <li>3 lemons freshly squeezed <em>( none fresh, no problemo! 1/3 cup of lemon juicy concentrate will do too</em></li>
-            <li>1 medium ginger <em>(don't even need to peel it!)</em></li>
-            <li>1 freshly ground chilli</li>
-            <li>2 TB honey for the golden magic</li>
-            <li>1 tbsp Tumeric for the earthy kick</li>
+          <li>10lb watermelon</li>
+          <li>
+            3 lemons freshly squeezed
+            <em
+              >( none fresh, no problemo! 1/3 cup of lemon juicy concentrate
+              will do to)</em
+            >
+          </li>
+          <li>1 medium ginger <em>(don't even need to peel it!)</em></li>
+          <li>1 freshly ground chilli</li>
+          <li>2 TB honey for the golden magic</li>
+          <li>1 tbsp Tumeric for the earthy kick</li>
         </ul>
-    </p>
-    <p>Have this every morning or <b>twice a day</b> if you feel a flu start coming on - muy bueno esta bebida!</p>
-    <div>
-      <button class="button">
-        <a href="../index.html">Homepage</a>
-      </button>
+      </div>
+      <p
+        style="
+          background-color: rgb(45, 54, 75);
+          color: rgb(230, 239, 255);
+          border-left: 5px solid rgb(230, 239, 255);
+          border-right: 5px solid rgb(230, 239, 255);
+        "
+      >
+        Have this every morning or <b>twice a day</b> if you feel a flu start
+        coming on - muy bueno esta bebida!
+      </p>
+      <div
+        style="
+          width: 650px;
+          border-top: 0;
+          border-top-right-radius: 0;
+          border-top-left-radius: 0;
+          padding-top: 15px;
+          padding-bottom: 15px;
+          background-color: rgb(230, 239, 255);
+          background-color: rgb(45, 54, 75);
+        "
+      >
+        <span class="span">
+          <a href="../index.html">Homepage</a>
+        </span>
+      </div>
     </div>
   </body>
 </html>
